src/test/deca/context/invalid/assign_instanceOf.deca
// Description:
//    Tester la fonctionalité de l'instanceOf 
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 01/01/2023

{
        int a=0;
        int c;
        float b =7.7;


        //attentre ils font les trus de classes
}